--- a/registered-events-provider/src/main/resources/application.properties
+++ b/registered-events-provider/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=9317
 
 
 mysql.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/zx_registered_event?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+db.url=jdbc:mysql://127.0.0.1:3306/registered-events-service?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 db.user=root
-db.password=rootDemo
-mysql.initialSize=100
+db.password=demo
+mysql.initialSize=10
 mysql.maxActive=1000
 mysql.maxIdle=500
 mysql.minIdle=20
@@ -17,7 +17,7 @@ mysql.maxWait=20
 # kafka配置信息
 #brokers集群
 #bootstrap.servers=10.103.11.1:9092,10.103.11.2:9092,10.103.11.3:9092
-bootstrap.servers=sgw.flaginfo.cn:12106
+bootstrap.servers=127.0.0.1:9092
 acks=all
 #发送失败重试次数
 retries=10
